# opentls

./: .gitignore  CMakeLists.txt  FindOpenTLS.cmake  LICENSE.md  Makefile.am  Makefile.in  OpenTLSConfig.cmake.in  README.7  README.md  aclocal.m4  configure  configure.ac  libtls.pc.in  tls.c  tls_config.c  tls_conninfo.c  tls_internal.h  tls_ocsp.c  tls_server.c  tls_signer.c  tls_util.c
.github/workflows/: ci.yml  ci_centos.yml  ci_cpu.yml
compat/: posix_win.c  recallocarray.c
docs/: _config.yml  index.md  tls_accept_socket.html  tls_accept_socket.md  tls_client.html  tls_client.md  tls_config_ocsp_require_stapling.html  tls_config_ocsp_require_stapling.md  tls_config_set_protocols.html  tls_config_set_protocols.md  tls_config_set_session_id.html  tls_config_set_session_id.md  tls_config_verify.html  tls_config_verify.md  tls_conn_version.html  tls_conn_version.md  tls_connect.html  tls_connect.md  tls_init.html  tls_init.md  tls_load_file.html  tls_load_file.md  tls_ocsp_process_response.html  tls_ocsp_process_response.md  tls_read.html  tls_read.md
include/: Makefile.am  Makefile.in  tls.h
include/compat/: unistd.h
m4/: check-libc.m4
man/: CMakeLists.txt  Makefile.am  Makefile.in
src/: a_time_posix.c  tls.c  tls.sym  tls_client.c  tls_config.c  tls_conninfo.c  tls_internal.h  tls_ocsp.c  tls_peer.c  tls_server.c  tls_verify.c
tests/: CMakeLists.txt  configtest.c  example.c  keypairtest.bat  tlstest.c  tlstest_win.c
