dist_man3_MANS =
dist_man3_MANS += tls_accept_socket.3
dist_man3_MANS += tls_client.3
dist_man3_MANS += tls_config_ocsp_require_stapling.3
dist_man3_MANS += tls_config_set_protocols.3
dist_man3_MANS += tls_config_set_session_id.3
dist_man3_MANS += tls_config_verify.3
dist_man3_MANS += tls_conn_version.3
dist_man3_MANS += tls_connect.3
dist_man3_MANS += tls_init.3
dist_man3_MANS += tls_load_file.3
dist_man3_MANS += tls_ocsp_process_response.3
dist_man3_MANS += tls_read.3
install-data-hook:
	ln -sf "tls_accept_socket.3" "$(DESTDIR)$(mandir)/man3/tls_accept_cbs.3"
	ln -sf "tls_accept_socket.3" "$(DESTDIR)$(mandir)/man3/tls_accept_fds.3"
	ln -sf "tls_client.3" "$(DESTDIR)$(mandir)/man3/tls_configure.3"
	ln -sf "tls_client.3" "$(DESTDIR)$(mandir)/man3/tls_free.3"
	ln -sf "tls_client.3" "$(DESTDIR)$(mandir)/man3/tls_reset.3"
	ln -sf "tls_client.3" "$(DESTDIR)$(mandir)/man3/tls_server.3"
	ln -sf "tls_config_set_protocols.3" "$(DESTDIR)$(mandir)/man3/tls_config_parse_protocols.3"
	ln -sf "tls_config_set_protocols.3" "$(DESTDIR)$(mandir)/man3/tls_config_prefer_ciphers_client.3"
	ln -sf "tls_config_set_protocols.3" "$(DESTDIR)$(mandir)/man3/tls_config_prefer_ciphers_server.3"
	ln -sf "tls_config_set_protocols.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_alpn.3"
	ln -sf "tls_config_set_protocols.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_ciphers.3"
	ln -sf "tls_config_set_protocols.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_dheparams.3"
	ln -sf "tls_config_set_protocols.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_ecdhecurves.3"
	ln -sf "tls_config_set_session_id.3" "$(DESTDIR)$(mandir)/man3/tls_config_add_ticket_key.3"
	ln -sf "tls_config_set_session_id.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_session_fd.3"
	ln -sf "tls_config_set_session_id.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_session_lifetime.3"
	ln -sf "tls_config_verify.3" "$(DESTDIR)$(mandir)/man3/tls_config_insecure_noverifycert.3"
	ln -sf "tls_config_verify.3" "$(DESTDIR)$(mandir)/man3/tls_config_insecure_noverifyname.3"
	ln -sf "tls_config_verify.3" "$(DESTDIR)$(mandir)/man3/tls_config_insecure_noverifytime.3"
	ln -sf "tls_conn_version.3" "$(DESTDIR)$(mandir)/man3/tls_conn_alpn_selected.3"
	ln -sf "tls_conn_version.3" "$(DESTDIR)$(mandir)/man3/tls_conn_cipher.3"
	ln -sf "tls_conn_version.3" "$(DESTDIR)$(mandir)/man3/tls_conn_cipher_strength.3"
	ln -sf "tls_conn_version.3" "$(DESTDIR)$(mandir)/man3/tls_conn_servername.3"
	ln -sf "tls_conn_version.3" "$(DESTDIR)$(mandir)/man3/tls_conn_session_resumed.3"
	ln -sf "tls_conn_version.3" "$(DESTDIR)$(mandir)/man3/tls_peer_cert_chain_pem.3"
	ln -sf "tls_conn_version.3" "$(DESTDIR)$(mandir)/man3/tls_peer_cert_contains_name.3"
	ln -sf "tls_conn_version.3" "$(DESTDIR)$(mandir)/man3/tls_peer_cert_hash.3"
	ln -sf "tls_conn_version.3" "$(DESTDIR)$(mandir)/man3/tls_peer_cert_issuer.3"
	ln -sf "tls_conn_version.3" "$(DESTDIR)$(mandir)/man3/tls_peer_cert_notafter.3"
	ln -sf "tls_conn_version.3" "$(DESTDIR)$(mandir)/man3/tls_peer_cert_notbefore.3"
	ln -sf "tls_conn_version.3" "$(DESTDIR)$(mandir)/man3/tls_peer_cert_provided.3"
	ln -sf "tls_conn_version.3" "$(DESTDIR)$(mandir)/man3/tls_peer_cert_subject.3"
	ln -sf "tls_connect.3" "$(DESTDIR)$(mandir)/man3/tls_connect_cbs.3"
	ln -sf "tls_connect.3" "$(DESTDIR)$(mandir)/man3/tls_connect_fds.3"
	ln -sf "tls_connect.3" "$(DESTDIR)$(mandir)/man3/tls_connect_servername.3"
	ln -sf "tls_connect.3" "$(DESTDIR)$(mandir)/man3/tls_connect_socket.3"
	ln -sf "tls_init.3" "$(DESTDIR)$(mandir)/man3/tls_config_error.3"
	ln -sf "tls_init.3" "$(DESTDIR)$(mandir)/man3/tls_config_free.3"
	ln -sf "tls_init.3" "$(DESTDIR)$(mandir)/man3/tls_config_new.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_add_keypair_file.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_add_keypair_mem.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_add_keypair_ocsp_file.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_add_keypair_ocsp_mem.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_clear_keys.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_ca_file.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_ca_mem.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_ca_path.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_cert_file.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_cert_mem.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_crl_file.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_crl_mem.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_key_file.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_key_mem.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_keypair_file.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_keypair_mem.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_keypair_ocsp_file.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_keypair_ocsp_mem.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_ocsp_staple_file.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_ocsp_staple_mem.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_set_verify_depth.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_verify_client.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_config_verify_client_optional.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_default_ca_cert_file.3"
	ln -sf "tls_load_file.3" "$(DESTDIR)$(mandir)/man3/tls_unload_file.3"
	ln -sf "tls_ocsp_process_response.3" "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_cert_status.3"
	ln -sf "tls_ocsp_process_response.3" "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_crl_reason.3"
	ln -sf "tls_ocsp_process_response.3" "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_next_update.3"
	ln -sf "tls_ocsp_process_response.3" "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_response_status.3"
	ln -sf "tls_ocsp_process_response.3" "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_result.3"
	ln -sf "tls_ocsp_process_response.3" "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_revocation_time.3"
	ln -sf "tls_ocsp_process_response.3" "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_this_update.3"
	ln -sf "tls_ocsp_process_response.3" "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_url.3"
	ln -sf "tls_read.3" "$(DESTDIR)$(mandir)/man3/tls_close.3"
	ln -sf "tls_read.3" "$(DESTDIR)$(mandir)/man3/tls_error.3"
	ln -sf "tls_read.3" "$(DESTDIR)$(mandir)/man3/tls_handshake.3"
	ln -sf "tls_read.3" "$(DESTDIR)$(mandir)/man3/tls_reset.3"
	ln -sf "tls_read.3" "$(DESTDIR)$(mandir)/man3/tls_write.3"

uninstall-local:
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_accept_cbs.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_accept_fds.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_configure.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_free.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_reset.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_server.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_parse_protocols.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_prefer_ciphers_client.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_prefer_ciphers_server.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_alpn.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_ciphers.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_dheparams.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_ecdhecurves.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_add_ticket_key.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_session_fd.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_session_lifetime.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_insecure_noverifycert.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_insecure_noverifyname.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_insecure_noverifytime.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_conn_alpn_selected.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_conn_cipher.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_conn_cipher_strength.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_conn_servername.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_conn_session_resumed.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_cert_chain_pem.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_cert_contains_name.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_cert_hash.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_cert_issuer.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_cert_notafter.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_cert_notbefore.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_cert_provided.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_cert_subject.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_connect_cbs.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_connect_fds.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_connect_servername.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_connect_socket.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_error.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_free.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_new.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_add_keypair_file.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_add_keypair_mem.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_add_keypair_ocsp_file.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_add_keypair_ocsp_mem.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_clear_keys.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_ca_file.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_ca_mem.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_ca_path.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_cert_file.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_cert_mem.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_crl_file.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_crl_mem.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_key_file.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_key_mem.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_keypair_file.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_keypair_mem.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_keypair_ocsp_file.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_keypair_ocsp_mem.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_ocsp_staple_file.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_ocsp_staple_mem.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_set_verify_depth.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_verify_client.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_config_verify_client_optional.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_default_ca_cert_file.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_unload_file.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_cert_status.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_crl_reason.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_next_update.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_response_status.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_result.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_revocation_time.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_this_update.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_peer_ocsp_url.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_close.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_error.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_handshake.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_reset.3"
	-rm -f "$(DESTDIR)$(mandir)/man3/tls_write.3"
